Create Album Details View
-update Page Title
-create commonFunctions File
-create TrackCard
-create fetchAlbumDetailsByCollectionId Epic
-remove font

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="main.css">
-    <title>React-Redux-TS Template</title>
+    <title>SharpSpring Code Challenge</title>
   </head>
   <body>
     <noscript>
